# ai-note

./: .env.template  .gitignore  .pre-commit-config.yaml  .prettierignore  pyproject.toml  requirements.txt
.github/agents/: copilot-instructions.md  speckit.checklist.agent.md  speckit.constitution.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
ai/: AGENT_INSTRUCTION.md  README.md  client.py  presets.py  retry.py
config/: README.md  settings.py
desktop_app/: AGENT_INSTRUCTION.md  README.md  __init__.py  editor.py  main.py  settings_dialog.py  ui.py
hooks/: hook-cryptography.py
scripts/: build_windows.ps1
specs/001-ai-rewrite-notepad/: .env.template  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  testing.md
specs/001-ai-rewrite-notepad/checklists/: plan-checklist.md  requirements.md
specs/001-ai-rewrite-notepad/scripts/: check_secrets.py
specs/003-add-ai-settings/: data-model.md  implementation.md  plan.md  quickstart.md  spec.md  tasks.md
specs/003-add-ai-settings/checklists/: requirements.md
storage/: AGENT_INSTRUCTION.md  README.md  __init__.py  db.py  migrations.py  repository.py  utils.py
tests/: conftest.py
tests/unit/: test_ai_apply_mode.py  test_ai_client.py  test_ai_retry.py  test_migrations.py  test_rewrite_modes.py  test_search.py  test_storage.py  test_storage_ai_settings.py  test_storage_utils.py  test_tags.py  test_ui_reload_modes.py
