[tool.poetry]
name = "ai-notepad"
version = "0.1.0"
description = "Desktop Notepad with AI Rewrite Assistant (MVP)"
authors = ["spec-kit <dev@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
sqlite3 = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ruff = "^0.0"
black = "^24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = ["py311"]

[tool.black]
line-length = 88
target-version = ["py311"]
